--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,4 +38,4 @@ jobs:
           git config user.email ${{ secrets.GIT_EMAIL }}
           git add .
           git commit -q -m "Deploying to gh-pages from @ $GITHUB_SHA in $(date +"%Y年%m月%d日 %T %Z")"
-          git push -f -q https://$GITHUB_ACTOR:${{ github.token }}@github.com/vitepress-starter.git main:gh-pages --tags
+          git push -f -q https://$GITHUB_ACTOR:${{ github.token }}@github.com/$GITHUB_REPOSITORY.git main:gh-pages --tags
